# Neuropalite

./: .gitignore  README.md  pyproject.toml  run.py
Python/: pyproject.toml  run.py
Python/config/: muse_config.yaml
Python/scripts/: scan_muse.py
Python/src/neuropalite/: __init__.py
Python/src/neuropalite/core/: __init__.py  alpha_metrics.py  data_logger.py  muse_manager.py  signal_processor.py  streaming_orchestrator.py
Python/src/neuropalite/web/templates/: dashboard.html
Python/tests/core/: test_lsl_streamer.py  test_signal_processor.py
Unity/Neuropalite/: .gitignore  README.md  mono_crash.0.0.json
Unity/Neuropalite/Assets/Animations/: DanceController.controller
Unity/Neuropalite/Assets/Art/Materials/: FriendshipBannerMat.mat  GlitterFloorMat.mat
Unity/Neuropalite/Assets/Art/Shaders/: NeuropaliteGlitterURP.shader
Unity/Neuropalite/Assets/Plugins/macOS/: liblsl.dylib
Unity/Neuropalite/Assets/Scenes/: RunOpalite.unity  StartOpalite.unity
Unity/Neuropalite/Assets/Scenes/RunOpalite/: LightingData.asset  Lightmap-0_comp_light.exr  (+2 more)
Unity/Neuropalite/Assets/Scripts/: DiscoRotate.cs
Unity/Neuropalite/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
Unity/Neuropalite/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
Unity/Neuropalite/Tests/: python_mock_lsl_sender.py
config/: muse_config.yaml  processing_config.yaml
docs/: NEUROPALITE_PLAN.md
src/neuropalite/core/: data_buffer.py  lsl_streamer.py  muse_manager.py  orchestrator.py
src/neuropalite/utils/: logger.py  validators.py
src/neuropalite/web/: app.py  routes.py  websocket_handlers.py
src/neuropalite/web/templates/: base.html  dashboard.html
tests/core/: test_alpha_metrics.py  test_data_buffer.py  test_lsl_streamer.py
(+25 files in other folders)
